[gd_scene load_steps=6 format=2]

[ext_resource path="res://game_screen/game_screen.gd" type="Script" id=1]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://game_screen/camera.gd" type="Script" id=4]
[ext_resource path="res://game_screen/gui.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]

[node name="GameScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Gui" type="Node" parent="."]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="Gui"]

[node name="EnergyBar" type="ProgressBar" parent="Gui/CanvasLayer"]
margin_right = 283.0
margin_bottom = 18.0
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseContainer" type="ColorRect" parent="Gui/CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Gui/CanvasLayer/PauseContainer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseTitle" type="Label" parent="Gui/CanvasLayer/PauseContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 512.0
margin_bottom = 145.0
text = "Pause"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Gui/CanvasLayer/PauseContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 512.0
margin_bottom = 169.0
alignment = 1

[node name="QuitButton" type="Button" parent="Gui/CanvasLayer/PauseContainer/VBoxContainer/HBoxContainer"]
margin_left = 199.0
margin_right = 239.0
margin_bottom = 20.0
text = "Quit"

[node name="ContinueButton" type="Button" parent="Gui/CanvasLayer/PauseContainer/VBoxContainer/HBoxContainer"]
margin_left = 243.0
margin_right = 312.0
margin_bottom = 20.0
text = "Continue"

[node name="Camera" type="KinematicBody2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="Camera" type="Camera2D" parent="Camera"]
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera"]
shape = SubResource( 1 )

[connection signal="pressed" from="Gui/CanvasLayer/PauseContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Gui/CanvasLayer/PauseContainer/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
